corrected typo in s-t-uitesTag

--- a/presentation/tinytest2JUnit_09May23.html
+++ b/presentation/tinytest2JUnit_09May23.html
@@ -3735,7 +3735,7 @@ slide[data-slide-num='12']::after {
 
 <p> </p>
 
-<p>tinytest vs. testthat</p></div>
+<p>testthat vs. tinytest</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Issues</h2></hgroup><article  id="issues-3">
 
